--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-21T15:52:22Z</date>
+						<date>2019-02-21T16:08:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -414,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kDfxPIi5gff+
-								MBpu8Pw5Ew==
+								xifXduCq9eOh
+								jVK9MhryAQ==
 								</data>
 								<key>Size</key>
-								<integer>315368</integer>
+								<integer>315382</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
