--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-21T15:51:40Z</date>
+						<date>2019-02-21T16:08:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -564,11 +564,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sCeMoGYmn8gN
-								HP49JdIh+w==
+								0g9r8Q/X1uoj
+								eO2o+vvQEg==
 								</data>
 								<key>Size</key>
-								<integer>145681</integer>
+								<integer>145695</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
