--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-21T15:30:29Z</date>
+						<date>2019-02-21T16:08:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -304,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dmKNe7MToAiG
-								slfGZr9LuA==
+								++LSyJ3voVkr
+								KvrSuS0+fw==
 								</data>
 								<key>Size</key>
-								<integer>73811</integer>
+								<integer>73825</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
