--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T17:31:33Z</date>
+						<date>2019-02-21T16:08:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -414,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								oG/B5G60MJ6J
-								tSJTCBAVDw==
+								KTvz3Wl2reNg
+								yi490JEYjg==
 								</data>
 								<key>Size</key>
-								<integer>146735</integer>
+								<integer>146749</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
