--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-21T15:51:40Z</date>
+						<date>2019-02-21T16:08:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -904,11 +904,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/y/h2b2Fpjn0
-								pHTu2EBvjg==
+								JHE5dwB7Jr2p
+								ipyn1JA7Gg==
 								</data>
 								<key>Size</key>
-								<integer>257938</integer>
+								<integer>257952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
