--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-18T19:50:13Z</date>
+						<date>2019-02-21T16:08:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pYPyqKVZ+aBt
-								bcmSG6oM0A==
+								9Z1I6KezeE27
+								T0uZgdWing==
 								</data>
 								<key>Size</key>
-								<integer>107652</integer>
+								<integer>107666</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
