updates school schedule + food sat link
updates school schedule + food sat link

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7774,7 +7774,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-26T16:00:10Z</date>
+						<date>2019-02-27T14:15:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8123,31 +8123,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								R6BrvVCrflaH
-								RRUWKnv8+g==
+								iYrJELnhPtJD
+								qHM1WyujPg==
 								</data>
 								<key>Size</key>
-								<integer>392444</integer>
+								<integer>588520</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Pfk8sIuYIiUW
-								pRuMC15ybQ==
+								jmCZ4G8koarv
+								fKgVqRJ7ZQ==
 								</data>
 								<key>Size</key>
-								<integer>39675</integer>
+								<integer>41131</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QyE/2WVvEf/3
-								teV1i5d4JA==
+								UhXjW9kZT2bH
+								63EfZFXODw==
 								</data>
 								<key>Size</key>
-								<integer>314384</integer>
+								<integer>450377</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13428,7 +13428,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-26T16:00:10Z</date>
+						<date>2019-02-27T14:15:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14467,8 +14467,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0zLBtl/Rfbgc
-								OvByxlPH6w==
+								5yTis51y/1sI
+								No3nfF8mTA==
 								</data>
 								<key>Size</key>
 								<integer>3711</integer>
@@ -14535,8 +14535,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcESzQZ0
-				MgGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcETaYhG
+				InCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14546,7 +14546,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcESzQZ0N9aA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcETaYhGJ4WA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
