--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-26T16:00:10Z</date>
+						<date>2019-02-27T14:15:39Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -384,31 +384,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								R6BrvVCrflaH
-								RRUWKnv8+g==
+								iYrJELnhPtJD
+								qHM1WyujPg==
 								</data>
 								<key>Size</key>
-								<integer>392444</integer>
+								<integer>588520</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Pfk8sIuYIiUW
-								pRuMC15ybQ==
+								jmCZ4G8koarv
+								fKgVqRJ7ZQ==
 								</data>
 								<key>Size</key>
-								<integer>39675</integer>
+								<integer>41131</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QyE/2WVvEf/3
-								teV1i5d4JA==
+								UhXjW9kZT2bH
+								63EfZFXODw==
 								</data>
 								<key>Size</key>
-								<integer>314384</integer>
+								<integer>450377</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
