added netsci slack
added netsci slack

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-22T14:54:35Z</date>
+						<date>2019-02-27T16:46:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8roysfHPkAP7
-								MGuJQOP9OQ==
+								b2AWfWrmSHY+
+								1l8EMa9uUg==
 								</data>
 								<key>Size</key>
-								<integer>179771</integer>
+								<integer>182119</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ciE2TdVueUVo
-								Y3JzOA7oAg==
+								uQYEMR4k0dQk
+								x9Zt/CR+ew==
 								</data>
 								<key>Size</key>
-								<integer>107404</integer>
+								<integer>109405</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
