--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6566,7 +6566,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-22T14:54:35Z</date>
+						<date>2019-02-27T16:46:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6755,11 +6755,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8roysfHPkAP7
-								MGuJQOP9OQ==
+								b2AWfWrmSHY+
+								1l8EMa9uUg==
 								</data>
 								<key>Size</key>
-								<integer>179771</integer>
+								<integer>182119</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6775,11 +6775,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ciE2TdVueUVo
-								Y3JzOA7oAg==
+								uQYEMR4k0dQk
+								x9Zt/CR+ew==
 								</data>
 								<key>Size</key>
-								<integer>107404</integer>
+								<integer>109405</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13326,7 +13326,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-26T15:51:09Z</date>
+						<date>2019-02-27T16:46:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13375,11 +13375,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GgBKZb95py6y
-								QYnugtiuOw==
+								/zqiUJpxTxXQ
+								fFPzQ7yO5Q==
 								</data>
 								<key>Size</key>
-								<integer>5354</integer>
+								<integer>5386</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13428,7 +13428,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-27T14:15:39Z</date>
+						<date>2019-02-27T16:46:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14467,11 +14467,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5yTis51y/1sI
-								No3nfF8mTA==
+								ywP6AHoL82iI
+								lQo7j9btBg==
 								</data>
 								<key>Size</key>
-								<integer>3711</integer>
+								<integer>4562</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14535,8 +14535,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcETaYhG
-				InCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcETeyeC
+				RAeAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14546,7 +14546,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcETaYhGJ4WA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcETeyeCRvqA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
